--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --ignore *.json --exec babel-node --trace-warnings ./index.js",
     "build": "babel -d ./build ./src -s",
     "clean": "rm -rf build && mkdir build",
-    "start": "node ./build/entry.js",
+    "start": "node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
