--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rm -rf build && mkdir build",
     "clean-build": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run serve",
     "serve": "npm run clean-build && node ./build/WebApi.js"
   },
   "keywords": [
