--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "Form auto-fill and scrape",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "npm install",
     "dev": "nodemon --ignore *.json --exec babel-node --trace-warnings ./src/index.js",
     "build": "babel -d ./build ./src -s",
     "clean": "rm -rf build && mkdir build",
     "clean-build": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run serve",
-    "serve": "node ./build/WebApi.js"
+    "serve": "node ./build/WebServer.js"
   },
   "keywords": [
     "google",
