--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/node": "^7.13.13",
     "babel-preset-env": "^1.7.0",
     "console-log-html": "^2.0.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "got": "^11.8.2",
